--- a/src/app/main-body/kpi/kpi.component.css
+++ b/src/app/main-body/kpi/kpi.component.css
@@ -23,10 +23,21 @@
 
 .subscriptionButton {
   min-width: 22%;
-  margin: 5px;
+  margin: 1%;
   background-color: white;
   padding: 2%;
   align-items: center;
+  font-size: 10px;
+
+  border-width: 1px;
+  border-radius: 8%;
+  box-shadow: blue;
+}
+
+.subscriptionButton span {
+  top: 2px;
+  font-weight: bold;
+  font-size: 12px;
 }
 
 .subscriptionButtonBar {
@@ -84,11 +95,13 @@
   margin-bottom: 20%;
 
   /* background-color: red; */
-  font-size: 25px;
+  font-size: 17px;
   font-weight: 300;
 }
 
 .kpiheader {
   margin-top: 4%;
   margin-bottom: -10%;
+
+  font-size: 11px;
 }
