--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -7,19 +7,31 @@
   /* overflow-x: hidden; */
 }
 
+#mapIn {
+  visibility: collapse;
+}
+
+#mapOut {
+  visibility: visible;
+}
+
 .deviceDiv {
   height: 100% !important;
   width: 35%;
+
+  background-color: black;
 }
 
 .deviceChartDIV {
   min-height: 50% !important;
   max-height: 50%;
+  margin-bottom: 1%;
 }
 
 .serviceChartDiv {
   min-height: 50% !important;
   max-height: 50%;
+  background-color: brown;
 }
 
 .kpiDiv {
@@ -52,6 +64,28 @@
   width: 50%;
   padding: 1%;
 }
+
+@media only screen and (max-width: 1100px) {
+  .mainBodyDiv {
+    background-color: blue;
+    padding-top: 0%;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .chartsDiv {
+    margin-top: 0%;
+  }
+
+  #mapIn {
+    visibility: visible;
+  }
+
+  #mapOut {
+    display: none;
+  }
+}
+
 /* 
 @media only screen and (max-width: 768px) {
   .mainBodyDiv {
