--- a/src/app/main-body/saleschart/saleschart.component.css
+++ b/src/app/main-body/saleschart/saleschart.component.css
@@ -14,6 +14,11 @@
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-radius: 8px;
 }
+
+#chartDiv {
+  margin-top: 1%;
+  margin-bottom: -1% !important;
+}
 button {
   border: none;
   background-color: inherit;
