--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -1,14 +1,14 @@
 <div class="mainBodyDiv">
 
     <div class="deviceDiv" id="mapOut">
-        <div class="deviceChartDIV" id="mapOut"> <app-devicechart></app-devicechart></div>
-        <div class="serviceChartDiv" id="mapOut"><app-servicechart></app-servicechart>  </div>
+        <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
+        <div class="serviceChartDiv" ><app-servicechart></app-servicechart>  </div>
         
     </div>
 
-    <div class="deviceDiv" id="mapIn" style="display: flex; flex-direction: row;">
+    <div class="deviceDiv" id="mapIn">
 
-        <div style="display: flex; flex-direction: column;">
+        <div >
             <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
             <div class="serviceChartDiv"><app-servicechart></app-servicechart>  </div>
         </div>    
