--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -1,6 +1,7 @@
 .superMain {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .mainBodyDiv {
@@ -85,6 +86,12 @@
   .chartsDiv {
     width: 100%;
     margin-top: 0%;
+  }
+
+  .mapComponent {
+    position: relative;
+    right: 0%;
+    width: 70%;
   }
 
   #mapIn {
