--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -103,6 +103,73 @@
   }
 }
 
+@media only screen and (max-width: 400px) {
+  .mainBodyDiv {
+    background-color: blue;
+    padding-top: 0%;
+    grid-template-columns: 50% 50%;
+  }
+
+  .chartsDiv {
+    width: 100%;
+    margin-top: 0%;
+    grid-area: 1 / 1 / span 1 / span 2;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .kpiDiv {
+    height: 27vw;
+  }
+
+  .sales-testDiv {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .salesChart {
+    width: 100%;
+    height: 50vw;
+    background-color: blue;
+  }
+
+  .customerChart {
+    width: 100%;
+    height: 60vw;
+    background-color: black;
+  }
+
+  .deviceDiv {
+    height: auto;
+    grid-area: 2 / 1 / span 1 / span 2;
+    background-color: blueviolet;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .deviceChartDIV {
+    min-width: 50%;
+  }
+
+  .serviceChartDiv {
+    min-width: 50%;
+  }
+
+  #mapIn {
+    visibility: visible;
+    display: flex !important;
+    flex-direction: row;
+  }
+
+  #mapOut {
+    display: none;
+  }
+
+  .mapComponent {
+    grid-area: 3 / 1 / span 1 / span2;
+  }
+}
+
 /* 
 @media only screen and (max-width: 768px) {
   .mainBodyDiv {
