commit before pull

--- a/src/app/main-body/customer-details/customer-details.component.html
+++ b/src/app/main-body/customer-details/customer-details.component.html
@@ -29,7 +29,7 @@
         <div class="line"></div>
         <div class="table-graph">
             <div class="table">
-                <table>
+                <table id="device">
                     <tbody>
                         <tr>
                             <th> Id</th>
@@ -51,7 +51,7 @@
                 </table>
             </div>
             <div class="graph">
-                <canvas id="deviceChart"> </canvas>
+                <canvas id="deviceChart" style="padding: 10px;"> </canvas>
             </div>
         </div>
     </div>
