--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -21,6 +21,6 @@
 
 </div>
 
-<!-- <div class="maoComponent">
+<div class="maPComponent">
     <app-map-component></app-map-component>
-</div> -->
+</div>
