--- a/src/app/main-body/customer-details/customer-details.component.css
+++ b/src/app/main-body/customer-details/customer-details.component.css
@@ -40,8 +40,13 @@
 }
 .table{
     width: 100%;
-    overflow-y: scroll;
-    overflow-x: scroll;
+    margin:5vw;
+    margin-top: 5%;
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 90%;
+    margin-left:5%;
+    
 }
 
 table,tr,td,th{
@@ -50,8 +55,17 @@ table,tr,td,th{
     padding: 3vh;
 }
 .graph{
-    width: 100%;
+    width: 80%;
+    height: 35vw;
+    background: rgba(255, 255, 255, 0.363);
+    padding: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
+      rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
+      rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    border-radius: 8px;
+    margin:5vw;
 }
+tr:hover {background-color:  #cceeff}
 
 @media only screen and (min-width: 768px) {
     .details{
@@ -89,18 +103,31 @@ table,tr,td,th{
     .table{
         justify-content: center;
         text-align: center;
-        overflow-y: scroll;
-        overflow-x: hidden;
+        /* height:25vw; */
+        /* overflow-y: scroll; */
+      
         padding: 0%;
         margin: 0%;
+        width: 40%;
     }
     
     table,tr,td,th{
         border: 2px solid rgb(224, 220, 220);
         border-collapse: collapse;
-        padding: 3vh;
+        border: 1px solid #ddd;
+        padding: 12px;
     }
     .graph{
-        height:25vw;
+        height:19vw;
+        width: 40%;
+       
+       
     }
+    th{
+    padding-top: 12px;
+      padding-bottom: 12px;
+      background-color:#2ba6f1;
+      color: white;
+    }
+    tr:nth-child(even){background-color: #f2f2f2;}
 }
