--- a/src/app/main-body/device-performance/device-performance.component.css
+++ b/src/app/main-body/device-performance/device-performance.component.css
@@ -1,10 +1,20 @@
 .chart{
    width: 100%;
-   height: 100%;
+   height: 80%;
 }
 button{
     border-color:white;
     background:initial ;
     position: relative;
     float: right;
+}
+.data{
+    padding: 10px;
+    color: blue;
+    
+    
+}
+.content{
+padding: 3px;
+;
 }
