--- a/src/app/main-body/kpi/kpi.component.css
+++ b/src/app/main-body/kpi/kpi.component.css
@@ -6,6 +6,7 @@
   flex-direction: ltr;
   justify-self: center;
   height: 100%;
+  
 }
 
 .kpiheader {
@@ -91,4 +92,17 @@
 .kpiheader {
   margin-top: 4%;
   margin-bottom: -10%;
+}
+@media only screen and (max-width: 768px) {
+  .container {
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: baseline;
+    align-content: flex-start;
+
+   
+    
+  }
+ 
 }
