map routing some problem

--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -18,17 +18,17 @@
         </div>    
       
     
-        <!-- <div class="mapComponent" >
+        <div class="mapComponent" >
             <app-map-component  style="align-items: center;"></app-map-component>
-        </div> -->
+        </div>
 
 
     </div>
 
 
 
-<div class="maPComponent">
+<!-- <div class="maPComponent">
     <app-map-component></app-map-component>
-</div>
+</div> -->
 
 
