--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -6,7 +6,7 @@
   grid-gap: 0%;
   grid-template-columns: 27% 73%;
 
-  background-color: darkblue;
+  /* background-color: darkblue; */
 
   /* overflow-x: hidden; */
 }
@@ -25,7 +25,7 @@
   min-height: 100% !important;
   width: 100%;
   padding-bottom: 2%;
-  background-color: black;
+  /* background-color: black; */
 }
 
 .deviceChartDIV {
@@ -54,7 +54,7 @@
   height: auto;
   display: inline-block;
 
-  background-color: chartreuse;
+  /* background-color: chartreuse; */
 }
 
 .sales-testDiv {
@@ -79,7 +79,7 @@
 
 @media only screen and (max-width: 1100px) {
   .mainBodyDiv {
-    background-color: blue;
+    /* background-color: blue; */
     padding-top: 0%;
   }
 
@@ -106,7 +106,7 @@
 
 @media only screen and (max-width: 400px) {
   .mainBodyDiv {
-    background-color: blue;
+    /* background-color: blue; */
     padding-top: 0%;
     grid-template-columns: 50% 50%;
   }
@@ -131,19 +131,19 @@
   .salesChart {
     width: 100%;
     height: 50vw;
-    background-color: blue;
+    /* background-color: blue; */
   }
 
   .customerChart {
     width: 100%;
     height: 60vw;
-    background-color: black;
+    /* background-color: black; */
   }
 
   .deviceDiv {
     height: auto;
     grid-area: 2 / 1 / span 1 / span 2;
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
     display: flex;
     flex-direction: row;
   }
