--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -5,8 +5,8 @@
   display: grid;
   grid-gap: 0%;
   grid-template-columns: 27% 73%;
-
-  /* background-color: darkblue; */
+  grid-template-rows: 30vw 30vw;
+  background-color: green;
 
   /* overflow-x: hidden; */
 }
@@ -25,18 +25,19 @@
   min-height: 100% !important;
   width: 100%;
   padding-bottom: 2%;
-  /* background-color: black; */
+  background-color: black;
 }
 
 .deviceChartDIV {
-  min-height: 50% !important;
-  max-height: 50%;
   margin-bottom: 1%;
+  height: 49%;
+  background-color: rosybrown;
 }
 
 .serviceChartDiv {
-  min-height: 50% !important;
-  max-height: 50%;
+  height: 49%;
+
+  background-color: blue;
 }
 
 .kpiDiv {
@@ -54,7 +55,9 @@
   height: auto;
   display: inline-block;
 
-  /* background-color: chartreuse; */
+  padding-bottom: 0%;
+
+  background-color: red;
 }
 
 .sales-testDiv {
@@ -170,4 +173,3 @@
     grid-area: 3 / 1 / span 1 / span2;
   }
 }
-
