--- a/src/app/main-body/kpi/kpi.component.css
+++ b/src/app/main-body/kpi/kpi.component.css
@@ -6,7 +6,6 @@
   flex-direction: ltr;
   justify-self: center;
   height: 100%;
-  
 }
 
 .kpiheader {
@@ -124,7 +123,7 @@
   }
 }
 @media only screen and (max-width: 768px) {
-  .container {
+  /* .container {
     display:flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -134,5 +133,5 @@
    
     
   }
- 
+  */
 }
