--- a/src/app/main-body/customer-details/customer-details.component.css
+++ b/src/app/main-body/customer-details/customer-details.component.css
@@ -39,24 +39,28 @@
     display: block;
 }
 .table{
-    width: 100%;
-    margin:5vw;
+    width: 90%;
+    margin:2vw;
     margin-top: 5%;
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 90%;
+    width: 100%;
     margin-left:5%;
+    margin-right: 5%;
     
 }
 
 table,tr,td,th{
-    border: 2px solid rgb(224, 220, 220);
-    border-collapse: collapse;
-    padding: 3vh;
+         border: 2px solid rgb(224, 220, 220);
+        border-collapse: collapse;
+        border: 1px solid #ddd;
+        /* padding: 12px; */
+        padding: 1vh;
+        font-size:1%;
 }
 .graph{
-    width: 80%;
-    height: 35vw;
+    width: 90%;
+    height: 50vw;
     background: rgba(255, 255, 255, 0.363);
     padding: 5px;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
@@ -66,6 +70,12 @@ table,tr,td,th{
     margin:5vw;
 }
 tr:hover {background-color:  #cceeff}
+th{
+    padding-top: 1vh;
+      padding-bottom: 2px;
+      background-color:#2ba6f1;
+      color: white;
+    }
 
 @media only screen and (min-width: 768px) {
     .details{
