--- a/src/app/main-body/customerchart/customerchart.component.html
+++ b/src/app/main-body/customerchart/customerchart.component.html
@@ -3,11 +3,11 @@
 
 <div id="chartDiv" >  
 
-    <button (click)='sortByDevice()'>device</button>
-    <button (click)='sortByTest()'>test conducted</button>
+    <button (click)='sortByDevice()' id="device">Device</button>
+    <button (click)='sortByTest()'>Test Conducted</button>
   
     <a routerLink="customers">
-       <i class="fa fa-bars"></i>
+       <i class="fa fa-bars" style="margin-left: 3PX;"></i>
     </a>
     <canvas id="customerChart" ></canvas>
     
