--- a/src/app/main-body/device-performance/device-performance.component.html
+++ b/src/app/main-body/device-performance/device-performance.component.html
@@ -1,7 +1,8 @@
 
 <div class="chart">
-       
     <button  (click)='close()'>X</button>
+    <p id="head">Test Conducted</p>
+    <!-- <button  (click)='close()'>X</button> -->
     <div class="data">
         <div class="content">Device : {{deviceInfo.device}}</div>
         <div class="content" >DeviceId : {{deviceId}}</div>
