--- a/src/app/main-body/customer-details/customer-details.component.css
+++ b/src/app/main-body/customer-details/customer-details.component.css
@@ -1,6 +1,7 @@
 .container{
     background: #ffffff;
     /* background: linear-gradient(to right bottom, #ffffff, #00ffd5); */
+    /* font-size:20px; */
 }
 .profile-image{
     width: 100%;
@@ -36,17 +37,20 @@
 
 .table-graph{
     margin-top: 4vh;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .table{
     width: 90%;
-    margin:2vw;
-    margin-top: 5%;
+    margin:5vw;
+    /* margin-top: 5%; */
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 100%;
-    margin-left:5%;
-    margin-right: 5%;
+    /* width: 100%; */
+    /* margin-left:5%;*/
+    /* margin-right: 5%; */
+    
     
 }
 
@@ -54,15 +58,16 @@ table,tr,td,th{
          border: 2px solid rgb(224, 220, 220);
         border-collapse: collapse;
         border: 1px solid #ddd;
-        /* padding: 12px; */
-        padding: 1vh;
-        font-size:1%;
+        padding: 4px;
+        text-align: center;
+        /* padding: 2vh; */
+        /* font-size:1%; */
 }
 .graph{
     width: 90%;
     height: 50vw;
     background: rgba(255, 255, 255, 0.363);
-    padding: 5px;
+    /* padding: 5px; */
     box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
       rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
       rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
@@ -72,7 +77,7 @@ table,tr,td,th{
 tr:hover {background-color:  #cceeff}
 th{
     padding-top: 1vh;
-      padding-bottom: 2px;
+      padding-bottom: px;
       background-color:#2ba6f1;
       color: white;
     }
@@ -107,7 +112,8 @@ th{
         display: flex;
         height: 60vh;
         flex-direction: row;
-        align-items: center;
+        align-items:center;
+        justify-content: space-evenly;
     }
 
     .table{
@@ -117,25 +123,27 @@ th{
         /* overflow-y: scroll; */
       
         padding: 0%;
-        margin: 0%;
-        width: 40%;
+        margin: 4%;
+        margin-right: 0;
+        width: 80vw;
     }
     
     table,tr,td,th{
         border: 2px solid rgb(224, 220, 220);
         border-collapse: collapse;
         border: 1px solid #ddd;
-        padding: 12px;
+        padding: 15px;
     }
     .graph{
-        height:19vw;
-        width: 40%;
+        height:20vw;
+        width: 80vw;
+        padding: 1%;
        
        
     }
     th{
-    padding-top: 12px;
-      padding-bottom: 12px;
+     /* padding-top: 12px; */
+      /* padding-bottom: 12px; */
       background-color:#2ba6f1;
       color: white;
     }
