--- a/src/app/main-body/customerchart/customerchart.component.css
+++ b/src/app/main-body/customerchart/customerchart.component.css
@@ -5,8 +5,8 @@ button {
   font-size: 80%;
   font-weight: bold;
   padding: 2px;
-  margin: 5px;
-  margin-left: 5px;
+  margin-right: 8px;
+  margin-bottom: 3PX;
 }
 button:focus {
   color: blue;
@@ -23,4 +23,8 @@ button:focus {
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-radius: 8px;
+}
+
+#device{
+  margin-left: 40px;
 }
