--- a/src/app/main-body/customertable/customertable.component.css
+++ b/src/app/main-body/customertable/customertable.component.css
@@ -2,8 +2,9 @@
      margin-top: 5%;
       font-family: Arial, Helvetica, sans-serif;
       border-collapse: collapse;
-      width: 90%;
-      margin-left:5%;
+      width: 70%;
+      /* margin-left:5%; */
+     
     }
     
     #customer td, #customer th {
@@ -22,4 +23,8 @@
       
       background-color:#2ba6f1;
       color: white;
+    }
+    #tableDiv{
+      display: flex;
+      justify-content: center;
     }
