--- a/src/app/main-body/customer-details/customer-details.component.html
+++ b/src/app/main-body/customer-details/customer-details.component.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="details">
             <div class="profile-image">
-                <img src="../../../assets/profile.jpg">
+                <img src=" ../assets/profile.jpg">
             </div>
             <div class="line-s"></div>
             <div class="details-1">
