--- a/src/app/main-body/map-component/map-component.component.html
+++ b/src/app/main-body/map-component/map-component.component.html
@@ -1,3 +1,6 @@
 <div class=mapMain>
+        <div id="title">
+                Customer Location
+            </div>
         <div  id="chartdiv" ></div>
 </div>
