--- a/src/app/main-body/map-component/map-component.component.css
+++ b/src/app/main-body/map-component/map-component.component.css
@@ -3,13 +3,22 @@
   height: auto;
   margin-left: 0.4%;
   margin-right: 0.4%;
-  background: rgba(255, 255, 255, 0.253);
+  background: #007599;
   padding: 2%;
   padding-bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
     rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-radius: 8px;
+}
+#title{
+  font-size: 130%;
+  font-variant-caps: all-small-caps;
+  font-weight: bolder;
+  
+  width: 100%;
+  text-align: left;
+  color: rgb(255, 255, 255);
 }
 
 #chartdiv {
