--- a/src/app/main-body/servicechart/servicechart.component.css
+++ b/src/app/main-body/servicechart/servicechart.component.css
@@ -1,5 +1,5 @@
 #chartDiv {
-  height: 13vmax;
+  height: 13.5vmax;
   width: 100%;
   padding-top: 2%;
   padding-left: 1%;
@@ -27,4 +27,10 @@
   
 
   padding-top: 3%;
+}
+
+@media only screen and (max-width: 1100px){
+  #chartDiv{
+    height: 100%;
+  }
 }
