--- a/src/app/main-body/customer-details/customer-details.component.html
+++ b/src/app/main-body/customer-details/customer-details.component.html
@@ -15,14 +15,14 @@
             </div>
             <div class="line-s"></div>
             <div class="details-1">
-                <div class="content">Name: {{customerDetails.name}}</div>
-                <div class="content">Emp_id: {{customerDetails.id}}</div>
-                <div class="content">Company :{{customerDetails.company}} </div>
+                <div class="content">Name : {{customerDetails.name}}</div>
+                <div class="content">Customer Id : {{customerDetails.id}}</div>
+                <div class="content">Company : {{customerDetails.company}} </div>
             </div>
             <div class="details-1">
-                <div class="content">Email:{{customerDetails.email}}</div>
-                <div class="content">Phone:{{customerDetails.phone}}</div>
-                <div class="content">Address:{{customerDetails.address}}</div>
+                <div class="content">Email : {{customerDetails.email}}</div>
+                <div class="content">Phone : {{customerDetails.phone}}</div>
+                <div class="content">Address : {{customerDetails.address}}</div>
             </div>
         </div>
         <div class="line-s"></div>
@@ -51,6 +51,7 @@
                 </table>
             </div>
             <div class="graph">
+                <p id="head">Device Performance</p>
                 <canvas id="deviceChart" style="padding: 10px;"> </canvas>
             </div>
         </div>
