--- a/src/app/main-body/customerchart/customerchart.component.css
+++ b/src/app/main-body/customerchart/customerchart.component.css
@@ -29,7 +29,7 @@ button:focus {
 #chartDiv {
   width: 97% !important;
   height: 19vmax;
-  background: rgba(255, 255, 255);
+  background: rgba(255, 255, 255, 0.363);
   padding: 2%;
   padding-bottom: 30px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
