--- a/src/app/main-body/customertable/customertable.component.html
+++ b/src/app/main-body/customertable/customertable.component.html
@@ -1,3 +1,5 @@
+
+
 <div id="tableDiv">
     <table id="customer">
         <tr>
@@ -14,4 +16,5 @@
             <td (click)='showCustomer(customer.customerId)'>{{customer.testNum}}</td>
         </tr>
     </table>
+  <!-- <a routerLink=''>Home</a> -->
 </div>
