--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="appComp">
         <app-header></app-header>  
+        <!-- <a routerLink=''>Home</a> -->
         <div class="router">
                 <router-outlet></router-outlet>
         </div>
