--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -7,6 +7,7 @@
   grid-template-columns: 27% 73%;
   grid-template-rows: 30vw 30vw;
 
+
   /* overflow-x: hidden; */
 }
 
@@ -24,6 +25,7 @@
   min-height: 100% !important;
   width: 100%;
   padding-bottom: 2%;
+  padding-left: 2%;
 }
 
 .deviceChartDIV {
