--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -48,11 +48,14 @@
 }
 
 .chartsDiv {
-  width: 100%;
+  width: 99%;
   height: auto;
   display: inline-block;
 
   padding-bottom: 0%;
+  padding-left: 1%;
+  padding-right: 1%;
+
 }
 
 .sales-testDiv {
