--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
 <div class="headerDiv">
-    <img class="headerImage" src="../assets/headerimage.PNG" width="100%">
+    <a routerLink=''>
+        <img class="headerImage" src="../assets/headerimage.PNG" width="100%"> 
+    </a>
+  
 </div>
