--- a/src/app/main-body/customertable/customertable.component.html
+++ b/src/app/main-body/customertable/customertable.component.html
@@ -6,7 +6,7 @@
             <th>Customer Id</th>
             <th>Customer Name</th>
             <th>Total Device</th>
-            <th>Total Tesst</th>
+            <th>Total Test</th>
         </tr>
     
         <tr *ngFor='let customer of dataset' > 
