--- a/src/app/main-body/device-details/device-details.component.html
+++ b/src/app/main-body/device-details/device-details.component.html
@@ -40,6 +40,7 @@
                 </table>
             </div>
             <div class="graph">
+                <p id="head">Device Performance</p>
                 <canvas  id="deviceChart"></canvas>
             </div>
         </div>
